--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <h2 style="text-align:center;color: white;font-size: xx-large;">Other Information</h2>
 <h2 style="text-align:center;color: white;font-size: large;">For Dropping Money Automatically you can use auto_drop_money</h2>
 <h2 style="text-align:center;color: white;font-size: large;">I read the messages sent ingame sometimes using the server bridge :P</h2>
+<h2 style="text-align:center;color: white;font-size: large;">For the mouse movement and emotes i use the command vibe in the client</h2>
 <h2 style="text-align:center;color: white;font-size: xx-large;">If you have questions about the chillerbot client</h2>
 <a href="https://discord.gg/EEvMfTZdEw" style="text-align: center;color: white;font-size: large;">Chillerbot Support Discord</a>
 <h2 style="text-align:center;color: white;font-size: xx-large;">fokkonaut's stuff</h2>
 <a href="https://discord.gg/qccRrtb" style="text-align: center;color: white;font-size: large;">fokkonaut's playground discord</a>
+<a href="https://fokkonaut.de" style="text-align: center;color: white;font-size: large;">fokkonaut web</a>
 <style>
     body {
       background-image: url('amongus.png');
